<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <!--this list preference is for remind me option-->
        <EditTextPreference
            app:defaultValue="3"
            app:dialogTitle="@string/hisTitle"
            app:summary="@string/subTitle"
            app:key="pref_title"
            app:title="@string/hisTitle" />

        <!--on below line we are creating a switch preference
            default value is use to set switch on or off
            key is use to set key
            title is use to add title to our switch-->
        <!--this switch preference option is to remind for a bed time-->

        <!--below option is use to create a list
            preference for Upload preferences-->
        <ListPreference
            app:defaultValue="1"
            app:dialogTitle="@string/limit"
            app:entries="@array/pref_uploads"
            app:entryValues="@array/pref_uploads_val"
            app:key="@string/num_of_limit"
            app:summary="@string/sublimit"
            app:title="@string/limit" />

    </PreferenceCategory>

</PreferenceScreen>